# rainette

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  Dockerfile  README.md
Applications/: CMakeLists.txt  main.cpp
ConfigFiles/MyTest/: ObjTextReader  ObjTextWriter  RootFileManagerConfig  StringTextReader  StringTextWriter  TextReader  TextWriter  ToolChainConfig  ToolsConfig
RainetteDataModels/: CMakeLists.txt  RainetteDataModel.cpp  RainetteDataModel.h
UserDataModels/DataModel/: CMakeLists.txt  CardData.h
UserDataModels/MyDataModel/: CMakeLists.txt  MyDataModel.cpp  MyDataModel.h
UserTools/CosmicCrispConverter/: CMakeLists.txt  CosmicCrispConverter.cpp  CosmicCrispConverter.h
UserTools/MyTool/: CMakeLists.txt  MyTool.cpp  MyTool.h
UserTools/RootFileCreator/: CMakeLists.txt  RootFileCreator.cpp  RootFileCreator.h
UserTools/RootFileManager/: CMakeLists.txt  RootFileManager.cpp  RootFileManager.h
UserTools/TextReader/: CMakeLists.txt  TextReader.cpp  TextReader.h
UserTools/TextWriter/: CMakeLists.txt  TextWriter.cpp  TextWriter.h
UserTools/Wrench/: CMakeLists.txt  Wrench.cpp  Wrench.h
cmake/: FindCPPZMQ.cmake
src/data/: CMakeLists.txt  EventTest.cpp  EventTest.h  TestObj.cpp  TestObj.h
src/exe/: CMakeLists.txt  main.cpp
src/tools/IO/: CMakeLists.txt  IOBaseTool.cpp  IOBaseTool.h  MemphynoRawReader.cpp  MemphynoRawReader.h  README.md  Reader.cpp  Reader.h  RootFileManager.cpp  RootFileManager.h  TestObjWriter.cpp  TestObjWriter.h  TextIO.cpp  TextIO.h  TextWriter.cpp  TextWriter.h
src/tools/Reader/: README.md  Reader.cpp  Reader.h
src/tools/Tests/: CMakeLists.txt  MyTool.cpp  MyTool.h  README.md  Wrench.cpp  Wrench.h
src/tools/converters/: CMakeLists.txt  CosmicCrispConverter.cpp  CosmicCrispConverter.h  README.md
